--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,17 @@
 annotated-types==0.6.0
 anyio==3.7.1
+black==23.10.1
 click==8.1.7
 exceptiongroup==1.1.3
 fastapi==0.104.1
 h11==0.14.0
 httptools==0.6.1
 idna==3.4
+isort==5.12.0
+mypy-extensions==1.0.0
+packaging==23.2
+pathspec==0.11.2
+platformdirs==3.11.0
 pydantic==2.4.2
 pydantic_core==2.10.1
 python-dotenv==1.0.0
