--- a/requirements.txt
+++ b/requirements.txt
@@ -14,6 +14,7 @@ pathspec==0.11.2
 platformdirs==3.11.0
 pydantic==2.4.2
 pydantic_core==2.10.1
+python-decouple==3.8
 python-dotenv==1.0.0
 PyYAML==6.0.1
 sniffio==1.3.0
