add: .gitignore 업데이트

--- a/.gitignore
+++ b/.gitignore
@@ -409,3 +409,5 @@ zsdoc/data
 !/tests/_output/.gitkeep
 
 # End of https://www.toptal.com/developers/gitignore/api/python,pycharm,visualstudiocode,vim,macos,linux,zsh
+
+temp/*
