--- a/requirements.txt
+++ b/requirements.txt
@@ -12,12 +12,14 @@ mypy-extensions==1.0.0
 packaging==23.2
 pathspec==0.11.2
 platformdirs==3.11.0
+psycopg2-binary==2.9.9
 pydantic==2.4.2
 pydantic_core==2.10.1
 python-decouple==3.8
 python-dotenv==1.0.0
 PyYAML==6.0.1
 sniffio==1.3.0
+SQLAlchemy==2.0.23
 starlette==0.27.0
 typing_extensions==4.8.0
 uvicorn==0.23.2
