--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,9 @@
+alembic==1.12.1
 annotated-types==0.6.0
 anyio==3.7.1
 black==23.10.1
+certifi==2023.7.22
+charset-normalizer==3.3.2
 click==8.1.7
 exceptiongroup==1.1.3
 fastapi==0.104.1
@@ -8,6 +11,8 @@ h11==0.14.0
 httptools==0.6.1
 idna==3.4
 isort==5.12.0
+Mako==1.3.0
+MarkupSafe==2.1.3
 mypy-extensions==1.0.0
 packaging==23.2
 pathspec==0.11.2
@@ -18,10 +23,12 @@ pydantic_core==2.10.1
 python-decouple==3.8
 python-dotenv==1.0.0
 PyYAML==6.0.1
+requests==2.31.0
 sniffio==1.3.0
 SQLAlchemy==2.0.23
 starlette==0.27.0
 typing_extensions==4.8.0
+urllib3==2.0.7
 uvicorn==0.23.2
 uvloop==0.19.0
 watchfiles==0.21.0
