--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,7 +19,7 @@ services:
 
   db:
     container_name: oknawa_db
-    image: postgres:14
+    image: postgres:16-alpine
     volumes:
       - postgres_data:/var/lib/postgresql/data/
     env_file:
