--- a/requirements.txt
+++ b/requirements.txt
@@ -19,6 +19,7 @@ pathspec==0.11.2
 platformdirs==3.11.0
 psycopg2-binary==2.9.9
 pydantic==2.4.2
+pydantic-settings==2.0.3
 pydantic_core==2.10.1
 python-decouple==3.8
 python-dotenv==1.0.0
