--- a/requirements.txt
+++ b/requirements.txt
@@ -24,6 +24,7 @@ pydantic_core==2.10.1
 python-decouple==3.8
 python-dotenv==1.0.0
 PyYAML==6.0.1
+redis==5.0.1
 requests==2.31.0
 sniffio==1.3.0
 SQLAlchemy==2.0.23
