--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,6 +12,7 @@ services:
       - 8000:8000
     depends_on:
       - db
+      - redis
     env_file:
       - env/base.env
     networks:
@@ -26,6 +27,16 @@ services:
       - env/base.env
     ports:
       - 5433:5432
+    networks:
+      - oknawa-network
+
+  redis:
+    container_name: oknawa_redis
+    image: redis:6.0-alpine
+    env_file:
+      - env/base.env
+    ports:
+      - 6379:6379
     networks:
       - oknawa-network
 
