--- a/requirements.txt
+++ b/requirements.txt
@@ -8,8 +8,11 @@ click==8.1.7
 exceptiongroup==1.1.3
 fastapi==0.104.1
 h11==0.14.0
+httpcore==1.0.2
 httptools==0.6.1
+httpx==0.25.2
 idna==3.4
+iniconfig==2.0.0
 isort==5.12.0
 Mako==1.3.0
 MarkupSafe==2.1.3
@@ -17,10 +20,12 @@ mypy-extensions==1.0.0
 packaging==23.2
 pathspec==0.11.2
 platformdirs==3.11.0
+pluggy==1.3.0
 psycopg2-binary==2.9.9
 pydantic==2.4.2
 pydantic-settings==2.0.3
 pydantic_core==2.10.1
+pytest==7.4.3
 python-decouple==3.8
 python-dotenv==1.0.0
 PyYAML==6.0.1
