--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ black==23.10.1
 certifi==2023.7.22
 charset-normalizer==3.3.2
 click==8.1.7
+coverage==7.3.2
 exceptiongroup==1.1.3
 fastapi==0.104.1
 h11==0.14.0
@@ -26,6 +27,7 @@ pydantic==2.4.2
 pydantic-settings==2.0.3
 pydantic_core==2.10.1
 pytest==7.4.3
+pytest-cov==4.1.0
 python-decouple==3.8
 python-dotenv==1.0.0
 PyYAML==6.0.1
