--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,8 @@ charset-normalizer==3.3.2
 click==8.1.7
 coverage==7.3.2
 exceptiongroup==1.1.3
+factory-boy==3.3.0
+Faker==20.1.0
 fastapi==0.104.1
 h11==0.14.0
 httpcore==1.0.2
@@ -28,11 +30,13 @@ pydantic-settings==2.0.3
 pydantic_core==2.10.1
 pytest==7.4.3
 pytest-cov==4.1.0
+python-dateutil==2.8.2
 python-decouple==3.8
 python-dotenv==1.0.0
 PyYAML==6.0.1
 redis==5.0.1
 requests==2.31.0
+six==1.16.0
 sniffio==1.3.0
 SQLAlchemy==2.0.23
 starlette==0.27.0
