--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 alembic==1.12.1
 annotated-types==0.6.0
 anyio==3.7.1
+APScheduler==3.10.4
 black==23.10.1
 certifi==2023.7.22
 charset-normalizer==3.3.2
@@ -33,6 +34,7 @@ pytest-cov==4.1.0
 python-dateutil==2.8.2
 python-decouple==3.8
 python-dotenv==1.0.0
+pytz==2023.3.post1
 PyYAML==6.0.1
 redis==5.0.1
 requests==2.31.0
@@ -41,6 +43,7 @@ sniffio==1.3.0
 SQLAlchemy==2.0.23
 starlette==0.27.0
 typing_extensions==4.8.0
+tzlocal==5.2
 urllib3==2.0.7
 uvicorn==0.23.2
 uvloop==0.19.0
