--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,10 @@
+aiohttp==3.9.1
+aiosignal==1.3.1
 alembic==1.12.1
 annotated-types==0.6.0
 anyio==3.7.1
 APScheduler==3.10.4
+attrs==23.1.0
 black==23.10.1
 certifi==2023.7.22
 charset-normalizer==3.3.2
@@ -11,6 +14,7 @@ exceptiongroup==1.1.3
 factory-boy==3.3.0
 Faker==20.1.0
 fastapi==0.104.1
+frozenlist==1.4.1
 h11==0.14.0
 httpcore==1.0.2
 httptools==0.6.1
@@ -20,6 +24,7 @@ iniconfig==2.0.0
 isort==5.12.0
 Mako==1.3.0
 MarkupSafe==2.1.3
+multidict==6.0.4
 mypy-extensions==1.0.0
 packaging==23.2
 pathspec==0.11.2
@@ -49,3 +54,4 @@ uvicorn==0.23.2
 uvloop==0.19.0
 watchfiles==0.21.0
 websockets==12.0
+yarl==1.9.4
