--- a/requirements.txt
+++ b/requirements.txt
@@ -15,6 +15,7 @@ factory-boy==3.3.0
 Faker==20.1.0
 fastapi==0.104.1
 frozenlist==1.4.1
+greenlet==3.0.3
 h11==0.14.0
 httpcore==1.0.2
 httptools==0.6.1
@@ -30,6 +31,7 @@ packaging==23.2
 pathspec==0.11.2
 platformdirs==3.11.0
 pluggy==1.3.0
+polyline==2.0.2
 psycopg2-binary==2.9.9
 pydantic==2.4.2
 pydantic-settings==2.0.3
